- Fix JsonImporter.jsonToMatrix mutation and iteration assumptions - Add row count validation to Matrix.addColumns - Replace broad exception catches with specific types - Remove debug println statements from production code - fix Row iterator mutation behavior - Change matrix-json from using JsonSlurper to Jackson to reduce memory footprint - Compile matrix-smile DataframeConvert statically - Fix bug in the LinearRegression sample (wrong argument order)

--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -41,13 +41,15 @@ dependencies {
   compileOnly libs.groovy
   compileOnly libs.groovyJson
 
+  // Jackson for streaming JSON parsing (low memory footprint)
+  api("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
+  api("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
+
   testImplementation libs.groovy
   testImplementation libs.groovyJson
   testImplementation testLibs.junitJupiterApi
   testRuntimeOnly testLibs.junitJupiterEngine
   testRuntimeOnly testLibs.junitPlatformLauncher
-  testImplementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
-  testImplementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
 }
 
 test {
