--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,8 @@ include 'matrix-bigquery'
 include 'matrix-avro'
 include 'matrix-xchart'
 include 'matrix-tablesaw'
+include 'matrix-arff'
+include 'matrix-smile'
 include 'matrix-examples:candles'
 include 'matrix-examples:HousePrices'
 include 'matrix-examples:LinearRegression'
@@ -28,6 +30,3 @@ include 'matrix-examples:DecisionTree'
 include 'matrix-examples:whiskey'
 include 'matrix-examples:XChartDemo'
 include 'matrix-examples:AnalysisScenario1'
-
-include 'matrix-smile'
-include 'marix-arff'
