--- a/matrix-arff/build.gradle
+++ b/matrix-arff/build.gradle
@@ -1,6 +1,3 @@
-import org.gradle.api.tasks.testing.logging.TestExceptionFormat
-import org.gradle.api.tasks.testing.logging.TestLogEvent
-
 plugins {
   id 'groovy'
   id 'java-library'
@@ -11,6 +8,7 @@ plugins {
 
 group = 'se.alipsa.matrix'
 version = '0.1.0-SNAPSHOT'
+description = 'Matrix ARFF import/export'
 
 JavaCompile javaCompile = compileJava {
   options.release = 21
@@ -23,18 +21,15 @@ compileGroovy {
 }
 
 repositories {
-  if (version.toString().endsWith('SNAPSHOT')) {
-    mavenLocal()
-  }
   mavenCentral()
 }
 
 dependencies {
   compileOnly project(':matrix-core')
   compileOnly libs.groovy
-  api 'com.github.haifengl:smile-core:4.4.2'
-  testImplementation project(':matrix-core')
   testImplementation libs.groovy
+  testImplementation project(':matrix-core')
+  testImplementation project(':matrix-datasets')
   testImplementation testLibs.slf4jSimple
   testImplementation testLibs.junitJupiterApi
   testRuntimeOnly testLibs.junitJupiterEngine
@@ -43,42 +38,6 @@ dependencies {
 
 test {
   useJUnitPlatform()
-  testLogging {
-    // set options for log level LIFECYCLE
-    events TestLogEvent.FAILED,
-        TestLogEvent.PASSED,
-        TestLogEvent.SKIPPED,
-        TestLogEvent.STANDARD_OUT
-    exceptionFormat = TestExceptionFormat.FULL
-    showExceptions = true
-    showCauses = true
-    showStackTraces = true
-    showStandardStreams = true
-
-    // set options for log level DEBUG and INFO
-    debug {
-      events TestLogEvent.STARTED,
-          TestLogEvent.FAILED,
-          TestLogEvent.PASSED,
-          TestLogEvent.SKIPPED,
-          TestLogEvent.STANDARD_ERROR,
-          TestLogEvent.STANDARD_OUT
-      exceptionFormat = TestExceptionFormat.FULL
-    }
-    info.events = debug.events
-    info.exceptionFormat = debug.exceptionFormat
-
-    afterSuite { desc, result ->
-      def duration = result.endTime - result.startTime
-      println "Duration of $desc: $duration ms"
-      if (!desc.parent) { // will match the outermost suite
-        def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
-        def startItem = '|  ', endItem = '  |'
-        def repeatLength = startItem.length() + output.length() + endItem.length()
-        println('\n' + ('-' * repeatLength) + '\n' + startItem + output + endItem + '\n' + ('-' * repeatLength))
-      }
-    }
-  }
 }
 
 tasks.register('javadocJar', Jar) {
@@ -101,16 +60,16 @@ publishing {
       artifact(javadocJar)
       artifact(sourcesJar)
       pom {
-        name = 'Matrix smile support'
+        name = 'Matrix arff support'
         description = "${project.description}"
-        url = "https://github.com/Alipsa/matrix/matrix-smile"
+        url = "https://github.com/Alipsa/matrix/matrix-arff"
         properties = [
             'maven.compiler.release': "${javaCompile.options.release.get()}"
         ]
         licenses {
           license {
             name = 'MIT License'
-            url = 'https://raw.githubusercontent.com/Alipsa/matrix/matrix-smile/master/LICENSE'
+            url = 'https://raw.githubusercontent.com/Alipsa/matrix/matrix-arff/master/LICENSE'
           }
         }
         developers {
@@ -120,7 +79,7 @@ publishing {
           }
         }
         scm {
-          url = 'https://github.com/Alipsa/matrix/matrix-smile/tree/master'
+          url = 'https://github.com/Alipsa/matrix/matrix-arff/tree/master'
           connection = 'scm:git:https://github.com/Alipsa/matrix.git'
           developerConnection = 'scm:git:https://github.com/Alipsa/matrix.git'
         }
