--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -63,10 +63,10 @@ dependencies {
   testImplementation project(':matrix-core')
   testImplementation project(':matrix-stats')
   testImplementation project(':matrix-datasets')
-  api("se.alipsa.groovy:gsvg:0.2.0")
+  api("se.alipsa.groovy:gsvg:0.3.0")
 
   // One of these is enough
-  implementation "org.jfree:jfreechart:1.5.6"
+  //implementation "org.jfree:jfreechart:1.5.6"
   implementation 'org.knowm.xchart:xchart:3.8.8'
 
   compileOnly "org.openjfx:javafx-graphics:${javaFxVersion}:$qualifier"
