1. GgPlot.groovy - Fixed params.mid ?: 'white' issue (GgPlot.groovy:684)   - Changed from params.mid ?: 'white' to params.containsKey('mid') ? params.mid : 'white'   - This now correctly respects explicit null or empty string values passed by users
  2. ScaleIntegrationTest.groovy - Replaced fragile regex with XmlSlurper (ScaleIntegrationTest.groovy:583-595)
  - Added groovy-xml dependency to enable XmlSlurper
  - Refactored extractHistogramGroupContent() to use proper XML parsing:
    - Uses XmlSlurper.parseText() to parse SVG
    - Uses depthFirst().find() to locate the histogram group
    - Uses XmlUtil.serialize() for normalized comparison
  - This correctly handles nested <g> elements

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,6 +8,7 @@ dependencyResolutionManagement {
       library('groovyGinq', "org.apache.groovy:groovy-ginq:$groovyVersion")
       library('groovyJson', "org.apache.groovy:groovy-json:$groovyVersion")
       library('groovyTemplates', "org.apache.groovy:groovy-templates:$groovyVersion")
+      library('groovyXml', "org.apache.groovy:groovy-xml:$groovyVersion")
       library('groovyAnt', "org.apache.groovy:groovy-ant:$groovyVersion")
       library('groovyDoc', "org.apache.groovy:groovy-groovydoc:$groovyVersion")
       library('log4jApi', "org.apache.logging.log4j:log4j-api:2.25.2")
