--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -21,6 +21,7 @@ repositories {
     mavenLocal()
   }
   mavenCentral()
+  maven { url 'https://jitpack.io' }
 }
 
 JavaCompile javaCompile = compileJava {
@@ -68,6 +69,8 @@ dependencies {
   // One of these is enough
   //implementation "org.jfree:jfreechart:1.5.6"
   implementation 'org.knowm.xchart:xchart:3.8.8'
+  api 'com.github.hervegirod:fxsvgimage:1.4'
+  implementation 'com.github.weisj:jsvg:2.0.0'
 
   compileOnly "org.openjfx:javafx-graphics:${javaFxVersion}:$qualifier"
   compileOnly "org.openjfx:javafx-base:${javaFxVersion}:$qualifier"
