--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -27,6 +27,10 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
   </repositories>
   <dependencyManagement>
     <dependencies>
