--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -21,7 +21,6 @@ repositories {
     mavenLocal()
   }
   mavenCentral()
-  maven { url 'https://jitpack.io' }
 }
 
 JavaCompile javaCompile = compileJava {
@@ -69,7 +68,8 @@ dependencies {
   // One of these is enough
   //implementation "org.jfree:jfreechart:1.5.6"
   implementation 'org.knowm.xchart:xchart:3.8.8'
-  api 'com.github.hervegirod:fxsvgimage:1.4'
+  api 'se.alipsa:fxsvgimage:1.4.2'
+  //api 'org.girod:fxsvgimage:1.4'
   implementation 'com.github.weisj:jsvg:2.0.0'
 
   compileOnly "org.openjfx:javafx-graphics:${javaFxVersion}:$qualifier"
