--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ build/
 /matrix-examples/AnalysisScenario1/analysis_results/
 **/out/**
 /matrix-examples/LinearRegression/cars.png
+/matrix-charts/examples/gg/ggplot2/boxplot.svg
