- Add support for the median_hilow summary statistic - Merged the default theme with any user-supplied theme during rendering so a centered plot title no longer drops the plot/panel backgrounds, and I marked classic/minimal grid removals as   explicit blanks to keep their look intact. Added a regression test that asserts the default panel background remains when only plotTitle is customized.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,5 @@ build/
 /matrix-examples/AnalysisScenario1/analysis_results/
 **/out/**
 /matrix-examples/LinearRegression/cars.png
-/matrix-charts/examples/gg/ggplot2/boxplot.svg
-/matrix-charts/examples/gg/ggplot2/Rplots.pdf
-/matrix-charts/examples/gg/ggplot2/labels.svg
+/matrix-charts/examples/gg/ggplot2/*.svg
+/matrix-charts/examples/gg/ggplot2/*.pdf
