add BigDecimalExtension as a separate module so we can reuse it in matrix-stats later. Fix some code to make it more ideomatic groovy

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,13 +4,15 @@ dependencyResolutionManagement {
     libs {
       def groovyVersion="5.0.3"
       library('groovy', "org.apache.groovy:groovy:$groovyVersion")
-      library('groovySql', "org.apache.groovy:groovy-sql:$groovyVersion")
-      library('groovyGinq', "org.apache.groovy:groovy-ginq:$groovyVersion")
-      library('groovyJson', "org.apache.groovy:groovy-json:$groovyVersion")
-      library('groovyTemplates', "org.apache.groovy:groovy-templates:$groovyVersion")
-      library('groovyXml', "org.apache.groovy:groovy-xml:$groovyVersion")
       library('groovyAnt', "org.apache.groovy:groovy-ant:$groovyVersion")
       library('groovyDoc', "org.apache.groovy:groovy-groovydoc:$groovyVersion")
+      library('groovyGinq', "org.apache.groovy:groovy-ginq:$groovyVersion")
+      library('groovyJson', "org.apache.groovy:groovy-json:$groovyVersion")
+      library('groovyMacro', "org.apache.groovy:groovy-macro:$groovyVersion")
+      library('groovySql', "org.apache.groovy:groovy-sql:$groovyVersion")
+      library('groovyTemplates', "org.apache.groovy:groovy-templates:$groovyVersion")
+      library('groovyXml', "org.apache.groovy:groovy-xml:$groovyVersion")
+
       library('log4jApi', "org.apache.logging.log4j:log4j-api:2.25.2")
     }
 
