--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,4 @@ include 'matrix-examples:DecisionTree'
 include 'matrix-examples:whiskey'
 include 'matrix-examples:XChartDemo'
 include 'matrix-examples:AnalysisScenario1'
+include 'matrix-groovy-ext'
