--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -103,6 +103,10 @@
       <artifactId>matrix-smile</artifactId>
     </dependency>
     <dependency>
+      <groupId>se.alipsa.matrix</groupId>
+      <artifactId>matrix-groovy-ext</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
       <version>1.21.3</version>
