--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ build/
 .gradle/
 .idea/
 .DS_Store
+.Rhistory
 
 /matrix-bom/target/
 /matrix-sql/derby.log
@@ -11,3 +12,4 @@ build/
 /matrix-charts/examples/gg/ggplot2/*.svg
 /matrix-charts/examples/gg/ggplot2/*.pdf
 /.gradle-user/
+
