--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -61,7 +61,7 @@ dependencies {
   compileOnly project(':matrix-core')
   compileOnly project(':matrix-stats')
   compileOnly project(':matrix-groovy-ext')
-  api("se.alipsa.groovy:gsvg:0.4.0")
+  api("se.alipsa.groovy:gsvg:0.5.0-SNAPSHOT")
 
   // One of these is enough
   //implementation "org.jfree:jfreechart:1.5.6"
