--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -40,7 +40,7 @@ sourceSets {
 
 dependencies {
   compileOnly libs.groovy
-  implementation 'org.opentest4j:opentest4j:1.3.0'
+  testImplementation 'org.opentest4j:opentest4j:1.3.0'
   testImplementation libs.groovy
   testImplementation testLibs.junitJupiterApi
   testRuntimeOnly testLibs.junitJupiterEngine
