--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -6,6 +6,8 @@ plugins {
   id('java-library')
   id('signing')
   id('maven-publish')
+  id('jacoco')
+  id('codenarc')
   id("se.alipsa.nexus-release-plugin") version '2.0.0'
   //id("se.alipsa.nexus-release-plugin") version "1.0.1"
 }
@@ -91,6 +93,77 @@ test {
   }
 }
 
+// JaCoCo configuration for code coverage
+jacoco {
+  toolVersion = "0.8.12"
+}
+
+jacocoTestReport {
+  dependsOn test
+  reports {
+    xml.required = true
+    html.required = true
+    csv.required = false
+  }
+  afterEvaluate {
+    classDirectories.setFrom(files(classDirectories.files.collect {
+      fileTree(dir: it, exclude: [
+        // Exclude test classes from coverage
+        '**/*Test.class',
+        '**/*Test$*.class'
+      ])
+    }))
+  }
+}
+
+jacocoTestCoverageVerification {
+  dependsOn jacocoTestReport
+  violationRules {
+    rule {
+      limit {
+        minimum = 0.70 // 70% overall coverage minimum
+      }
+    }
+    rule {
+      element = 'CLASS'
+      // Exclude closure classes, exception classes, and assertion utilities from per-class coverage
+      excludes = [
+        '**.*_closure*',
+        '**.*Exception',
+        '**.ConversionException',
+        '**.MatrixAssertions' // Low coverage - needs dedicated assertion tests
+      ]
+      limit {
+        minimum = 0.30 // 30% per class minimum (excluding closures)
+      }
+    }
+  }
+}
+
+// CodeNarc configuration for static analysis
+codenarc {
+  toolVersion = '3.5.0'
+  configFile = file('config/codenarc/ruleset.groovy')
+  reportFormat = 'html'
+  ignoreFailures = true // Set to false to fail build on violations
+  maxPriority1Violations = 0
+  maxPriority2Violations = 10
+  maxPriority3Violations = 20
+}
+
+codenarcMain {
+  source = 'src/main/groovy'
+  // Exclude files with Groovy 5 switch expressions until CodeNarc fully supports them
+  exclude '**/ValueConverter.groovy'
+  exclude '**/MatrixBuilder.groovy'
+}
+
+codenarcTest {
+  source = 'src/test/groovy'
+}
+
+// Make check depend on quality checks
+check.dependsOn jacocoTestCoverageVerification, codenarcMain
 
 tasks.register('javadocJar', Jar) {
   dependsOn groovydoc
