- MatrixSqlFactory.create attempts to infer and set the JDBC driver when missing - MatrixSql connection lifecycle fixes (reconnect after close) - safer, prepared-statement updates with match-column validation - ResultSet improvements: updateRow is a no-op for detached sets, null-safe primitive/stream getters, strict unwrap contract - close metadata ResultSets for table discovery utilities - Dependency upgrades:   - se.alipsa.groovy:data-utils [2.0.3 -> 2.0.4]   - se.alipsa:maven-3.9.11-utils [1.0.0 -> 1.1.0]

--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -34,13 +34,14 @@ compileGroovy {
 
 dependencies {
     compileOnly libs.groovy
+    compileOnly libs.groovySql
     compileOnly project(':matrix-core')
     testImplementation project(':matrix-core')
     testImplementation project(':matrix-datasets')
-    implementation 'se.alipsa.groovy:data-utils:2.0.3'
+    implementation 'se.alipsa.groovy:data-utils:2.0.4'
     implementation 'commons-io:commons-io:2.21.0'
     implementation 'se.alipsa.groovy:dependency-resolver:1.0.1'
-    implementation 'se.alipsa:maven-3.9.11-utils:1.0.0'
+    implementation 'se.alipsa:maven-3.9.11-utils:1.1.0'
     //implementation 'org.apache.logging.log4j:log4j-api:2.24.1'
 
     testImplementation libs.groovy
