--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -44,12 +44,12 @@ dependencies {
 
 
   def fastExcelVersion = '0.19.0'
-  def poiVersion = '5.5.0'
+  def poiVersion = '5.5.1'
   compileOnly project(':matrix-core')
   testImplementation project(':matrix-core')
   implementation libs.log4jApi
 
-  implementation("org.apache.poi:poi:${poiVersion}")
+  api("org.apache.poi:poi:${poiVersion}")
   implementation("org.apache.poi:poi-ooxml:${poiVersion}")
   // https://github.com/dhatim/fastexcel
   implementation("org.dhatim:fastexcel:$fastExcelVersion")
