Fix test expectations

--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -62,7 +62,7 @@ test {
   testLogging {
     // set options for log level LIFECYCLE
     events TestLogEvent.FAILED,
-        TestLogEvent.PASSED,
+        //TestLogEvent.PASSED,
         TestLogEvent.SKIPPED,
         TestLogEvent.STANDARD_OUT
     exceptionFormat = TestExceptionFormat.FULL
