Fix broken tests

--- a/matrix-examples/AnalysisScenario1/build.gradle
+++ b/matrix-examples/AnalysisScenario1/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation project(":matrix-csv")
     implementation project(":matrix-stats")
     implementation project(":matrix-xchart")
+    implementation project(":matrix-groovy-ext")
     testImplementation testLibs.junitJupiter
     testImplementation testLibs.junitPlatformLauncher
 }
