update documentation, roadmap for 2.3.0 now complete.

--- a/matrix-datasets/build.gradle
+++ b/matrix-datasets/build.gradle
@@ -54,9 +54,10 @@ test {
     testLogging {
         // set options for log level LIFECYCLE
         events TestLogEvent.FAILED,
-                TestLogEvent.PASSED,
+                //TestLogEvent.PASSED,
                 TestLogEvent.SKIPPED,
-                TestLogEvent.STANDARD_OUT
+                TestLogEvent.STANDARD_OUT,
+                TestLogEvent.STANDARD_ERROR
         exceptionFormat = TestExceptionFormat.FULL
         showExceptions = true
         showCauses = true
