--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -58,9 +58,10 @@ test {
   testLogging {
     // set options for log level LIFECYCLE
     events TestLogEvent.FAILED,
-        TestLogEvent.PASSED,
+        //TestLogEvent.PASSED,
         TestLogEvent.SKIPPED,
-        TestLogEvent.STANDARD_OUT
+        TestLogEvent.STANDARD_OUT,
+        TestLogEvent.STANDARD_ERROR
     exceptionFormat = TestExceptionFormat.FULL
     showExceptions = true
     showCauses = true
@@ -81,8 +82,8 @@ test {
     info.exceptionFormat = debug.exceptionFormat
 
     afterSuite { desc, result ->
-      def duration = result.endTime - result.startTime
-      println "Duration of $desc: $duration ms"
+      //def duration = result.endTime - result.startTime
+      //println "Duration of $desc: $duration ms"
       if (!desc.parent) { // will match the outermost suite
         def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
         def startItem = '|  ', endItem = '  |'
