--- a/matrix-gsheets/build.gradle
+++ b/matrix-gsheets/build.gradle
@@ -78,9 +78,10 @@ test {
   testLogging {
     // set options for log level LIFECYCLE
     events TestLogEvent.FAILED,
-        TestLogEvent.PASSED,
+        //TestLogEvent.PASSED,
         TestLogEvent.SKIPPED,
         TestLogEvent.STANDARD_OUT
+        TestLogEvent.STANDARD_ERROR
     exceptionFormat = TestExceptionFormat.FULL
     showExceptions = true
     showCauses = true
@@ -101,8 +102,6 @@ test {
     info.exceptionFormat = debug.exceptionFormat
 
     afterSuite { desc, result ->
-      def duration = result.endTime - result.startTime
-      println "Duration of $desc: $duration ms"
       if (!desc.parent) { // will match the outermost suite
         def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
         def startItem = '|  ', endItem = '  |'
