--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -2,12 +2,31 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.alipsa.matrix</groupId>
-  <artifactId>matrix-bom-tests</artifactId>
+  <artifactId>matrix-all</artifactId>
   <version>2.4.0-SNAPSHOT</version>
-  <name>Test of Matrix BOM</name>
-  <description>Verification tests that the Matrix bom works as expected</description>
+  <name>All Matrix dependencies</name>
+  <description>Convenience pom with all matrix dependencies</description>
   <packaging>jar</packaging>
   <url>https://github.com/Alipsa/matrix</url>
+  <licenses>
+    <license>
+      <name>MIT</name>
+      <url>https://github.com/Alipsa/matrix/blob/main/LICENSE</url>
+    </license>
+  </licenses>
+  <developers>
+    <developer>
+      <name>Per Nyfelt</name>
+      <email>per.nyfelt@alipsa.se</email>
+      <organization>Alipsa HB</organization>
+      <organizationUrl>http://www.alipsa.se</organizationUrl>
+    </developer>
+  </developers>
+  <scm>
+    <connection>scm:git:https://github.com/Alipsa/matrix.git</connection>
+    <developerConnection>scm:git:https://github.com/Alipsa/matrix.git</developerConnection>
+    <url>https://github.com/Alipsa/matrix/tree/main</url>
+  </scm>
   <properties>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
@@ -16,18 +35,6 @@
     <junitPlatformVersion.version>1.13.4</junitPlatformVersion.version>
     <slf4j.version>2.0.17</slf4j.version>
   </properties>
-  <repositories>
-    <repository>
-      <id>oss.sonatype.org-snapshot</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -45,6 +52,7 @@
       <artifactId>groovy-all</artifactId>
       <version>5.0.3</version>
       <type>pom</type>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>se.alipsa.matrix</groupId>
@@ -107,6 +115,14 @@
       <artifactId>matrix-groovy-ext</artifactId>
     </dependency>
     <dependency>
+      <groupId>se.alipsa.matrix</groupId>
+      <artifactId>matrix-gsheets</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>se.alipsa.matrix</groupId>
+      <artifactId>matrix-tablesaw</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
       <version>1.21.3</version>
@@ -162,7 +178,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
-        <version>2.18.0</version>
+        <version>2.21.0</version>
         <configuration>
           <rulesUri>file://${basedir}/version-plugin-rules.xml</rulesUri>
         </configuration>
@@ -170,7 +186,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.6.1</version>
+        <version>3.6.2</version>
         <executions>
           <execution>
             <id>enforce-releases-maven-java</id>
@@ -197,7 +213,7 @@
       <plugin>
         <groupId>org.codehaus.gmavenplus</groupId>
         <artifactId>gmavenplus-plugin</artifactId>
-        <version>4.2.1</version>
+        <version>4.3.0</version>
         <executions>
           <execution>
             <goals>
@@ -211,5 +227,39 @@
       </plugin>
     </plugins>
   </build>
-
+  <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>3.2.8</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.sonatype.central</groupId>
+            <artifactId>central-publishing-maven-plugin</artifactId>
+            <version>0.10.0</version>
+            <extensions>true</extensions>
+            <configuration>
+              <publishingServerId>central</publishingServerId>
+              <autoPublish>true</autoPublish>
+              <checksums>required</checksums>
+              <deploymentName>${project.artifactId}-${project.version}</deploymentName>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
