- Simplified spreadsheet backends: removed POI and SODS implementations; FastExcel is now the single XLSX path and FastOds is the single ODS path (import/export/read). - Added append/replace support for existing XLSX and ODS files; preserves existing sheets and metadata. - New ODS streaming writer/appender that reuses table attributes/columns for base styling. - XLSX append now inherits sheetFormatPr, column widths, and page margins, and fixes relId collisions in workbook relationships. - ODS reader standardized on the stream implementation and now stops at trailing repeated empty rows to avoid inflated last‑row counts. - Updated tests to cover append/replace and style inheritance.

--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -62,7 +62,7 @@ dependencies {
   compileOnly libs.groovy
   compileOnly project(':matrix-core')
   compileOnly project(':matrix-stats')
-  compileOnly project(':matrix-groovy-ext')
+  //compileOnly project(':matrix-groovy-ext')
   api("se.alipsa.groovy:gsvg:1.0.0")
   api("se.alipsa.groovy:gsvg-export:1.0.0")
 
@@ -85,7 +85,7 @@ dependencies {
   testImplementation project(':matrix-core')
   testImplementation project(':matrix-stats')
   testImplementation project(':matrix-datasets')
-  testImplementation project(':matrix-groovy-ext')
+  //testImplementation project(':matrix-groovy-ext')
   testImplementation "org.openjfx:javafx-graphics:${javaFxVersion}:$qualifier"
   testImplementation "org.openjfx:javafx-base:${javaFxVersion}:$qualifier"
   testImplementation "org.openjfx:javafx-controls:${javaFxVersion}:$qualifier"
