--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -40,13 +40,12 @@ dependencies {
   compileOnly libs.groovy
 
   compileOnly project(':matrix-core')
-  compileOnly project(':matrix-groovy-ext')
 
   implementation 'org.apache.commons:commons-math3:3.6.1'
 
   testImplementation project(':matrix-core')
   testImplementation project(':matrix-datasets')
-  testImplementation project(':matrix-groovy-ext')
+  //testImplementation project(':matrix-groovy-ext')
   testImplementation libs.groovy
   testImplementation 'com.github.haifengl:smile-core:4.4.2'
   testImplementation("se.alipsa:jfinancials:1.0.0")
