--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -43,6 +43,10 @@ sourceSets {
 dependencies {
   api project(':matrix-groovy-ext')
   compileOnly libs.groovy
+
+  // Optional SLF4J support - not required at runtime
+  compileOnly 'org.slf4j:slf4j-api:2.0.17'
+
   testImplementation 'org.opentest4j:opentest4j:1.3.0'
   testImplementation libs.groovy
   testImplementation testLibs.junitJupiterApi
@@ -52,6 +56,9 @@ dependencies {
   testImplementation 'com.h2database:h2:2.4.240'
   testImplementation libs.groovySql
   testImplementation libs.groovyGinq
+
+  // For testing with SLF4J
+  testImplementation testLibs.slf4jSimple
 }
 
 test {
