- Updated all Priority sections to show "✅ Complete" with item counts - Changed remaining effort from "7-10 hours" to "2 hours (administrative tasks only)" - Completely rewrote "Release Timeline Recommendation" section to reflect current status - Added detailed breakdown of administrative tasks remaining for release

--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -106,6 +106,9 @@ test {
       //println "Duration of $desc: $duration ms"
       totalDuration += duration
       if (!desc.parent) { // will match the outermost suite
+        // Note: Using println here is the standard Gradle pattern for test listeners.
+        // Using logger.lifecycle causes configuration cache issues as it references
+        // a Gradle script object from a closure at execution time.
         println "\nTotal test duration: ${totalDuration/1000} s"
         def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
         def startItem = '|  ', endItem = '  |'
