--- a/matrix-gsheets/build.gradle
+++ b/matrix-gsheets/build.gradle
@@ -52,7 +52,7 @@ dependencies {
   testRuntimeOnly testLibs.junitPlatformLauncher
   testImplementation libs.groovy
   testImplementation libs.groovyJson
-  testImplementation testLibs.log4jToSlf4j
+  // Removed log4jToSlf4j - no longer needed after migrating to matrix-core Logger
   testImplementation testLibs.slf4jSimple
   testImplementation 'org.mockito:mockito-core:5.21.0'
   testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
