Fixed som codenarc violations

--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -22,8 +22,14 @@ JavaCompile javaCompile = compileJava {
   options.compilerArgs << "-Xlint:unchecked"
 }
 
+compileTestJava {
+  options.deprecation = true
+  options.compilerArgs << "-Xlint:unchecked"
+}
+
 compileGroovy {
   options.deprecation = true
+  options.compilerArgs << "-Xlint:unchecked"
 }
 
 repositories {
