--- a/matrix-gsheets/build.gradle
+++ b/matrix-gsheets/build.gradle
@@ -31,6 +31,10 @@ compileGroovy {
   options.deprecation = true
 }
 
+configurations {
+  mockitoAgent
+}
+
 dependencies {
   compileOnly libs.groovy
   compileOnly libs.groovyAnt
@@ -54,12 +58,15 @@ dependencies {
   testImplementation libs.groovyJson
   // Removed log4jToSlf4j - no longer needed after migrating to matrix-core Logger
   testImplementation testLibs.slf4jSimple
-  testImplementation 'org.mockito:mockito-core:5.21.0'
+  mockitoAgent('org.mockito:mockito-core:5.21.0') {
+    transitive = false
+  }
+  //testImplementation 'org.mockito:mockito-core:5.21.0'
   testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
 }
 
 test {
-  jvmArgs '-Xmx2g'
+  jvmArgs "-Xmx2g", "-javaagent:${configurations.mockitoAgent.asPath}"
   useJUnitPlatform()
 
   // Enable via: -PrunExternalTests=true  or env RUN_EXTERNAL_TESTS=true  or -DRUN_EXTERNAL_TESTS=true
