--- a/matrix-arff/build.gradle
+++ b/matrix-arff/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.1.0-SNAPSHOT'
+version = '0.1.0'
 description = 'Matrix ARFF import/export'
 
 JavaCompile javaCompile = compileJava {
