big query and avro release prep

--- a/matrix-avro/build.gradle
+++ b/matrix-avro/build.gradle
@@ -10,7 +10,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.1.0-SNAPSHOT'
+version = '0.1.0'
 
 JavaCompile javaCompile = compileJava {
   options.release = 21
