--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -10,7 +10,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.5.0-SNAPSHOT'
+version = '0.5.0'
 description = "Groovy library for importing and exporting to and from Google BigQuery to a Matrix"
 
 ext.releaseNexusUrl = version.toString().endsWith("SNAPSHOT")
