--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -13,7 +13,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '3.6.0-SNAPSHOT'
+version = '3.6.0'
 description = "Groovy library for working with matrix ([][] data)"
 
 JavaCompile javaCompile = compileJava {
