--- a/matrix-parquet/build.gradle
+++ b/matrix-parquet/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.4.0-SNAPSHOT'
+version = '0.4.0'
 description = "Groovy library for importing and exporting parquet files to and from a Matrix"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
