--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.3.0-SNAPSHOT'
+version = '2.3.0'
 description = 'Matrix spreadsheet import/export'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
