--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.3.0-SNAPSHOT'
+version = '2.3.0'
 description = 'Groovy sql module for Matrix'
 
 repositories {
