--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.3.0-SNAPSHOT'
+version = '2.3.0'
 description = "Statistical hypothesis tests based on Matrix data."
 
 ext.nexusUrl = version.contains("SNAPSHOT")
