--- a/matrix-tablesaw/build.gradle
+++ b/matrix-tablesaw/build.gradle
@@ -13,7 +13,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.2.2-SNAPSHOT'
+version = '0.2.2'
 description = 'Allows conversion between Matrix and Tablesaw'
 
 repositories {
