--- a/matrix-xchart/build.gradle
+++ b/matrix-xchart/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.2.3-SNAPSHOT'
+version = '0.2.3'
 description = "Groovy library for creating charts with xcharts using matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
