--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.alipsa.matrix</groupId>
   <artifactId>matrix-all</artifactId>
-  <version>2.4.0</version>
+  <version>2.4.1-SNAPSHOT</version>
   <name>All Matrix dependencies</name>
   <description>Convenience pom with all matrix dependencies</description>
   <packaging>jar</packaging>
