Update bigquery google-cloud-resourcemanager version. Ensure build cache problem does not halt the build.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,7 @@
 org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1024m
 org.gradle.configuration-cache=true
+# Report configuration cache problems as warnings instead of errors.
+# The dependencyUpdates plugin (com.github.ben-manes.versions) is not compatible
+# with configuration cache and has notCompatibleWithConfigurationCache set,
+# which invalidates the cache. This setting prevents problems from failing the build.
+org.gradle.configuration-cache.problems=warn
