--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,9 @@ allprojects {
     }
   }
   tasks.matching { it.name == "dependencyUpdates" }.configureEach {
-    // Disable configuration cache for this task - plugin not fully compatible with Gradle 9.2+
+    // Plugin is not compatible with configuration cache (uses Task.project at execution time).
+    // This invalidates the cache entry when dependencyUpdates is in the task graph.
+    // Also run with --no-parallel on Gradle 9.x: ./gradlew dependencyUpdates --no-parallel
     notCompatibleWithConfigurationCache("dependencyUpdates plugin uses Task.project at execution time")
 
     gradleReleaseChannel = "current"
