--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.4.0'
+version = '0.4.1-SNAPSHOT'
 description = "Groovy chart library for plotting with matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
