--- a/matrix-gsheets/build.gradle
+++ b/matrix-gsheets/build.gradle
@@ -10,7 +10,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.1.1'
+version = '0.1.2-SNAPSHOT'
 description = 'Google Sheets import/export'
 
 repositories {
