--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.3.0'
+version = '2.3.1-SNAPSHOT'
 description = 'Matrix spreadsheet import/export'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
