--- a/matrix-tablesaw/build.gradle
+++ b/matrix-tablesaw/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.2.2'
+version = '0.2.3-SNAPSHOT'
 description = 'Allows conversion between Matrix and Tablesaw'
 
 repositories {
