--- a/matrix-xchart/build.gradle
+++ b/matrix-xchart/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.2.3'
+version = '0.2.4-SNAPSHOT'
 description = "Groovy library for creating charts with xcharts using matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
