Implemented the Phase 8 delegation wiring work with direct-charm-first rendering and guarded fallback:
- Updated GgChart.render() to use direct Charm render by default, with a single isolated legacy fallback entry point (matrix-charts/src/main/groovy/se/alipsa/matrix/gg/GgChart.groovy).
- Expanded gg geom base with Charm spec mapping support (matrix-charts/src/main/groovy/se/alipsa/matrix/gg/geom/Geom.groovy).
- Reworked adapter mapping/fallback behavior and delegation guards (matrix-charts/src/main/groovy/se/alipsa/matrix/gg/adapter/GgCharmAdapter.groovy).
- Added layer-specific data handling in Charm pipeline (matrix-charts/src/main/groovy/se/alipsa/matrix/charm/render/CharmRenderer.groovy).
- Updated affected tests for mixed gg/charm class naming and adapter expectations:
  - matrix-charts/src/test/groovy/gg/RendererCssAttributesTest.groovy
  - matrix-charts/src/test/groovy/gg/adapter/GgCharmAdapterTest.groovy
  - matrix-charts/src/test/groovy/gg/scale/ScaleIntegrationTest.groovy
- Fix the SimpleCharmChart.sh script

--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -140,6 +140,20 @@ test {
   }
 }
 
+tasks.register('printCp') {
+  // Combine both configurations into a single FileCollection
+  def fullClasspath = configurations.runtimeClasspath +
+      configurations.compileClasspath +
+      tasks.jar.outputs.files
+
+  inputs.files(fullClasspath)
+
+  doLast {
+    // .asPath handles the OS-specific separator ( : or ; )
+    println fullClasspath.asPath
+  }
+}
+
 // Regression gate: run gg tests as a pre-merge quality check
 tasks.register('verifyGgRegression', Test) {
   description = 'Runs gg test suite as a regression gate before merge'
