--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -140,17 +140,20 @@ test {
   }
 }
 
+// Utility task to print the classpath, excluding Groovy dependencies, to easily run examples
 tasks.register('printCp') {
-  // Combine both configurations into a single FileCollection
-  def fullClasspath = configurations.runtimeClasspath +
+  // Combine configurations into a single FileCollection
+  def fullClasspath = configurations.testRuntimeClasspath +
       configurations.compileClasspath +
       tasks.jar.outputs.files
 
   inputs.files(fullClasspath)
 
   doLast {
-    // .asPath handles the OS-specific separator ( : or ; )
-    println fullClasspath.asPath
+    def filteredPath = fullClasspath.filter { file ->
+      !file.path.contains("org/apache/groovy")
+    }.asPath // .asPath handles the OS-specific separator ( : or ; )
+    println filteredPath
   }
 }
 
